--- a/_ipynb/netflix_content_analysis.ipynb
+++ b/_ipynb/netflix_content_analysis.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "넷플릭스 콘텐츠 분석하기\n",
+    "# pyecharts로 넷플릭스 데이터 시각화하기\n",
     "=================\n",
     "\n",
     "안녕하세요, 킹래빗입니다🐰    \n",
     "데이터 분석으로 처음 글을 적어보는데요,     \n",
     "    \n",
     "다들 많이 보시는 넷플릭스 영화 및 TV 콘텐츠를 분석해 본 내용입니다🎬🍿    \n",
-    "데이터는 kaggle의 데이터셋을 이용해서 **미국 넷플릭스 데이터**라고 보시면 될 것 같아요.       \n",
+    "데이터는 kaggle의 데이터셋을 이용해서 **미국 넷플릭스 데이터**라고 보시면 될 것 같아요.   \n",
+    "pyecharts를 이용해 간단하게 시각화하는 내용이어서 쉽게 따라하실 수 있어요.    \n",
     "\n",
     "> 데이터와 분석 노트북은 깃허브 리포지토리에서 확인하실 수 있습니다.     \n",
     "> + [데이터셋 바로가기][link]\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -224,7 +225,7 @@
        "4  In a city of coaching centers known to train I...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -321,15 +322,15 @@
        "        }\n",
        "    });\n",
        "</script>\n",
-       "    <div id=\"10bf60f7f89f4d98a2c000af47d3655a\" style=\"width:900px;height:400px;\"></div>\n",
+       "    <div id=\"6874e37f8c4543b3a4796fc3ffd907e2\" style=\"width:900px;height:400px;\"></div>\n",
        "\n",
        "\n",
        "<script>\n",
        "    require(['echarts'], function(echarts) {\n",
        "        \n",
-       "var myChart_10bf60f7f89f4d98a2c000af47d3655a = echarts.init(document.getElementById('10bf60f7f89f4d98a2c000af47d3655a'), 'light', {renderer: 'canvas'});\n",
+       "var myChart_6874e37f8c4543b3a4796fc3ffd907e2 = echarts.init(document.getElementById('6874e37f8c4543b3a4796fc3ffd907e2'), 'light', {renderer: 'canvas'});\n",
        "\n",
-       "var option_10bf60f7f89f4d98a2c000af47d3655a = {\n",
+       "var option_6874e37f8c4543b3a4796fc3ffd907e2 = {\n",
        "    \"title\": [\n",
        "        {\n",
        "            \"text\": \"\\uad6d\\uac00\\ubcc4 \\ub137\\ud50c\\ub9ad\\uc2a4 \\ucf58\\ud150\\uce20 \\uac1c\\uc218\",\n",
@@ -363,7 +364,7 @@
        "            }\n",
        "        }\n",
        "    },\n",
-       "    \"series_id\": 7862038,\n",
+       "    \"series_id\": 467944,\n",
        "    \"tooltip\": {\n",
        "        \"trigger\": \"item\",\n",
        "        \"triggerOn\": \"mousemove|click\",\n",
@@ -414,7 +415,7 @@
        "            \"markLine\": {\n",
        "                \"data\": []\n",
        "            },\n",
-       "            \"seriesId\": 7862038\n",
+       "            \"seriesId\": 467944\n",
        "        }\n",
        "    ],\n",
        "    \"legend\": [\n",
@@ -471,8 +472,8 @@
        "                \"France\",\n",
        "                \"Japan\",\n",
        "                \"Spain\",\n",
-       "                \"Germany\",\n",
        "                \"South Korea\",\n",
+       "                \"Germany\",\n",
        "                \"Mexico\"\n",
        "            ]\n",
        "        }\n",
@@ -538,16 +539,16 @@
        "        \"#f6f5ec\"\n",
        "    ]\n",
        "};\n",
-       "myChart_10bf60f7f89f4d98a2c000af47d3655a.setOption(option_10bf60f7f89f4d98a2c000af47d3655a);\n",
+       "myChart_6874e37f8c4543b3a4796fc3ffd907e2.setOption(option_6874e37f8c4543b3a4796fc3ffd907e2);\n",
        "\n",
        "    });\n",
        "</script>\n"
       ],
       "text/plain": [
-       "<pyecharts.charts.bar.Bar at 0x182bf96e6a0>"
+       "<pyecharts.charts.bar.Bar at 0x7f97f0185dc0>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -621,15 +622,15 @@
        "        }\n",
        "    });\n",
        "</script>\n",
-       "    <div id=\"8354854b01304010aa968a92288adaef\" style=\"width:900px;height:400px;\"></div>\n",
+       "    <div id=\"d3586439516549b1b965868f444b9ec4\" style=\"width:900px;height:400px;\"></div>\n",
        "\n",
        "\n",
        "<script>\n",
        "    require(['echarts'], function(echarts) {\n",
        "        \n",
-       "var myChart_8354854b01304010aa968a92288adaef = echarts.init(document.getElementById('8354854b01304010aa968a92288adaef'), 'light', {renderer: 'canvas'});\n",
+       "var myChart_d3586439516549b1b965868f444b9ec4 = echarts.init(document.getElementById('d3586439516549b1b965868f444b9ec4'), 'light', {renderer: 'canvas'});\n",
        "\n",
-       "var option_8354854b01304010aa968a92288adaef = {\n",
+       "var option_d3586439516549b1b965868f444b9ec4 = {\n",
        "    \"title\": [\n",
        "        {\n",
        "            \"text\": \"\\uc5f0\\ub3c4\\ubcc4 \\ucd94\\uac00\\ub41c \\ucf58\\ud150\\uce20 \\uc218\",\n",
@@ -663,7 +664,7 @@
        "            }\n",
        "        }\n",
        "    },\n",
-       "    \"series_id\": 6606426,\n",
+       "    \"series_id\": 6087743,\n",
        "    \"tooltip\": {\n",
        "        \"trigger\": \"item\",\n",
        "        \"triggerOn\": \"mousemove|click\",\n",
@@ -696,7 +697,7 @@
        "                1879.0,\n",
        "                1498.0\n",
        "            ],\n",
-       "            \"stack\": \"stack_6606426\",\n",
+       "            \"stack\": \"stack_6087743\",\n",
        "            \"barCategoryGap\": \"20%\",\n",
        "            \"label\": {\n",
        "                \"normal\": {\n",
@@ -719,7 +720,7 @@
        "            \"markLine\": {\n",
        "                \"data\": []\n",
        "            },\n",
-       "            \"seriesId\": 6606426\n",
+       "            \"seriesId\": 6087743\n",
        "        }\n",
        "    ],\n",
        "    \"legend\": [\n",
@@ -847,16 +848,16 @@
        "        \"#f6f5ec\"\n",
        "    ]\n",
        "};\n",
-       "myChart_8354854b01304010aa968a92288adaef.setOption(option_8354854b01304010aa968a92288adaef);\n",
+       "myChart_d3586439516549b1b965868f444b9ec4.setOption(option_d3586439516549b1b965868f444b9ec4);\n",
        "\n",
        "    });\n",
        "</script>\n"
       ],
       "text/plain": [
-       "<pyecharts.charts.bar.Bar at 0x182bf951e80>"
+       "<pyecharts.charts.bar.Bar at 0x7f9802c54d30>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -906,15 +907,15 @@
        "        }\n",
        "    });\n",
        "</script>\n",
-       "    <div id=\"5063f3d9df964e5c9c678e6b8ba307af\" style=\"width:800px;height:400px;\"></div>\n",
+       "    <div id=\"082850cdd599474997d743be3c54a611\" style=\"width:800px;height:400px;\"></div>\n",
        "\n",
        "\n",
        "<script>\n",
        "    require(['echarts'], function(echarts) {\n",
        "        \n",
-       "var myChart_5063f3d9df964e5c9c678e6b8ba307af = echarts.init(document.getElementById('5063f3d9df964e5c9c678e6b8ba307af'), 'light', {renderer: 'canvas'});\n",
+       "var myChart_082850cdd599474997d743be3c54a611 = echarts.init(document.getElementById('082850cdd599474997d743be3c54a611'), 'light', {renderer: 'canvas'});\n",
        "\n",
-       "var option_5063f3d9df964e5c9c678e6b8ba307af = {\n",
+       "var option_082850cdd599474997d743be3c54a611 = {\n",
        "    \"title\": [\n",
        "        {\n",
        "            \"text\": \"\\uc720\\ud615\\ubcc4 \\ub137\\ud50c\\ub9ad\\uc2a4 \\ucf58\\ud150\\uce20 \\ube44\\uc911\",\n",
@@ -948,7 +949,7 @@
        "            }\n",
        "        }\n",
        "    },\n",
-       "    \"series_id\": 192351,\n",
+       "    \"series_id\": 2993534,\n",
        "    \"tooltip\": {\n",
        "        \"trigger\": \"item\",\n",
        "        \"triggerOn\": \"mousemove|click\",\n",
@@ -1000,7 +1001,7 @@
        "                    \"formatter\": \"{b}: {d}%\"\n",
        "                }\n",
        "            },\n",
-       "            \"seriesId\": 192351\n",
+       "            \"seriesId\": 2993534\n",
        "        }\n",
        "    ],\n",
        "    \"legend\": [\n",
@@ -1048,16 +1049,16 @@
        "        \"#f6f5ec\"\n",
        "    ]\n",
        "};\n",
-       "myChart_5063f3d9df964e5c9c678e6b8ba307af.setOption(option_5063f3d9df964e5c9c678e6b8ba307af);\n",
+       "myChart_082850cdd599474997d743be3c54a611.setOption(option_082850cdd599474997d743be3c54a611);\n",
        "\n",
        "    });\n",
        "</script>\n"
       ],
       "text/plain": [
-       "<pyecharts.charts.pie.Pie at 0x182bf95ec70>"
+       "<pyecharts.charts.pie.Pie at 0x7f9802c54bb0>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1132,15 +1133,15 @@
        "        }\n",
        "    });\n",
        "</script>\n",
-       "    <div id=\"9d09fcbc81504396a312ac1f9af1e6a9\" style=\"width:900px;height:400px;\"></div>\n",
+       "    <div id=\"fd31c07c7ce14fbaa5a7c595122e1d2e\" style=\"width:900px;height:400px;\"></div>\n",
        "\n",
        "\n",
        "<script>\n",
        "    require(['echarts'], function(echarts) {\n",
        "        \n",
-       "var myChart_9d09fcbc81504396a312ac1f9af1e6a9 = echarts.init(document.getElementById('9d09fcbc81504396a312ac1f9af1e6a9'), 'light', {renderer: 'canvas'});\n",
+       "var myChart_fd31c07c7ce14fbaa5a7c595122e1d2e = echarts.init(document.getElementById('fd31c07c7ce14fbaa5a7c595122e1d2e'), 'light', {renderer: 'canvas'});\n",
        "\n",
-       "var option_9d09fcbc81504396a312ac1f9af1e6a9 = {\n",
+       "var option_fd31c07c7ce14fbaa5a7c595122e1d2e = {\n",
        "    \"title\": [\n",
        "        {\n",
        "            \"text\": \"\\uc7a5\\ub974\\ubcc4 \\ucf58\\ud150\\uce20 \\uac1c\\uc218\",\n",
@@ -1174,7 +1175,7 @@
        "            }\n",
        "        }\n",
        "    },\n",
-       "    \"series_id\": 6852444,\n",
+       "    \"series_id\": 3226739,\n",
        "    \"tooltip\": {\n",
        "        \"trigger\": \"item\",\n",
        "        \"triggerOn\": \"mousemove|click\",\n",
@@ -1225,7 +1226,7 @@
        "            \"markLine\": {\n",
        "                \"data\": []\n",
        "            },\n",
-       "            \"seriesId\": 6852444\n",
+       "            \"seriesId\": 3226739\n",
        "        }\n",
        "    ],\n",
        "    \"legend\": [\n",
@@ -1349,16 +1350,16 @@
        "        \"#f6f5ec\"\n",
        "    ]\n",
        "};\n",
-       "myChart_9d09fcbc81504396a312ac1f9af1e6a9.setOption(option_9d09fcbc81504396a312ac1f9af1e6a9);\n",
+       "myChart_fd31c07c7ce14fbaa5a7c595122e1d2e.setOption(option_fd31c07c7ce14fbaa5a7c595122e1d2e);\n",
        "\n",
        "    });\n",
        "</script>\n"
       ],
       "text/plain": [
-       "<pyecharts.charts.bar.Bar at 0x182bf951f10>"
+       "<pyecharts.charts.bar.Bar at 0x7f97e01efa90>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
